<resources>
    <string name="app_name">BodyLogger</string>
    <string name="body_weight">体重</string>
    <string name="body_fat_per">体脂肪率</string>
    <string name="body_image_str">体型画像</string>
    <string name="write_comment_btn">コメントを記入</string>
    <string name="add_button">データ追加</string>
    <string name="add_comment_btn">コメント追加</string>
    <string name="sub_comment_btn">コメント削除</string>
    <string name="complete_button">完了</string>
    <string name="comment_hint0">コメント0</string>
    <string name="comment_hint1">コメント1</string>
    <string name="comment_hint2">コメント2</string>
    <string name="comment_hint3">コメント3</string>
    <string name="left_arrow">←</string>
    <string name="right_arrow">→</string>
    <string name="pop_up_card_list_title">その他コメント</string>
    <string name="pop_up_card_body_weight">:%3.2f kg</string>
    <string name="pop_up_card_body_per_fat">:%3.2f %%</string>
    <string name="first_main_activity_desc">
        右上のボタンを押すと、\n新たに今日の体重情報について\n入力することが出来ます。\n\nこのページには月ごとの体重情報一覧が表示されます。\n\n体重情報をタップすると、\n詳細が確認出来ます。
    </string>
    <string name="first_add_new_info_desc">
        体重・体脂肪率・補足画像・\nその他コメントを追加できます。\n\n補足画像はカメラで撮影します。\n自分の体型を撮影しておくと\n身体の変化が分かってオススメです。\n\nコメントは最大4つまで記入できます。\n何も書かなければ追加されません。\n\n同じ日に2度データ追加をした場合は、\n最期に追加したものが優先されます。
    </string>
</resources>
