<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewInfoActivity">

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:autofillHints="@string/body_weight"
        android:hint="@string/body_weight"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputBodyPerFat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/body_fat_per"
        android:hint="@string/body_fat_per"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight" />

    <Button
        android:id="@+id/writeCommentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/write_comment_btn"
        app:layout_constraintBottom_toTopOf="@+id/addNewInfoButton"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/addNewInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-120dp" />

    <ImageButton
        android:id="@+id/bodyImageButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/body_image_str"
        android:background="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toTopOf="@+id/writeCommentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>