<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PopUpCardActivity">

    <GridLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="end"
            android:textSize="24sp"
            android:text="@string/body_weight" />

        <TextView
            android:id="@+id/pop_up_card_weight"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:textSize="24sp"
            android:layout_column="1" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="end"
            android:textSize="24sp"
            android:text="@string/body_fat_per" />

        <TextView
            android:id="@+id/pop_up_card_fat_par"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_row="1"
            android:layout_column="1" />
    </GridLayout>


    <ImageView
        android:id="@+id/pop_up_card_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/body_image_str"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pop_up_card_list_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_card_image" />

    <ListView
        android:id="@+id/otherList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>
